[gd_scene load_steps=3 format=3 uid="uid://dywuodgyflx0h"]

[ext_resource type="Script" path="res://Assets/Scripts/dialog_box.gd" id="1_tdhsa"]
[ext_resource type="AudioStream" uid="uid://dbe7prwjqg8j2" path="res://Assets/SFX/triKnock05.wav" id="2_s2gii"]

[node name="Dialog_Box" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tdhsa")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1180, 300)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -590.0
offset_top = -350.0
offset_right = 590.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="StartText" type="RichTextLabel" parent="MarginContainer/Panel"]
custom_minimum_size = Vector2(900, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -110.0
offset_right = 450.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size={100}][center][b]*... ... ...*[/b][/center][/font_size]"
fit_content = true
scroll_active = false

[node name="KnockButton" type="HBoxContainer" parent="MarginContainer/Panel"]
custom_minimum_size = Vector2(900, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -454.0
offset_top = -80.0
offset_right = 454.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button2" type="Button" parent="MarginContainer/Panel/KnockButton"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "KNOCK KNOCK"

[node name="KnockText" type="RichTextLabel" parent="MarginContainer/Panel"]
visible = false
custom_minimum_size = Vector2(900, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -110.0
offset_right = 450.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size={100}][center][b][i]*KNOCK KNOCK*[/i][/b][/center][/font_size]"
fit_content = true
scroll_active = false

[node name="AnswerText" type="RichTextLabel" parent="MarginContainer/Panel"]
visible = false
custom_minimum_size = Vector2(900, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -110.0
offset_right = 450.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size={100}][center][b]Who's there?[/b][/center][/font_size]"
fit_content = true
scroll_active = false

[node name="NameButton" type="HBoxContainer" parent="MarginContainer/Panel"]
custom_minimum_size = Vector2(900, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -454.0
offset_top = -80.0
offset_right = 454.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button2" type="Button" parent="MarginContainer/Panel/NameButton"]
visible = false
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Figs.
"

[node name="NameAnswerText" type="RichTextLabel" parent="MarginContainer/Panel"]
visible = false
custom_minimum_size = Vector2(900, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -110.0
offset_right = 450.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size={100}][center][b]Figs who?[/b][/center][/font_size]"
fit_content = true
scroll_active = false

[node name="Line" type="HBoxContainer" parent="MarginContainer/Panel"]
custom_minimum_size = Vector2(900, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -454.0
offset_top = -80.0
offset_right = 454.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button2" type="Button" parent="MarginContainer/Panel/Line"]
visible = false
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Figs...
"

[node name="LineText" type="RichTextLabel" parent="MarginContainer/Panel"]
visible = false
custom_minimum_size = Vector2(900, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -110.0
offset_right = 450.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size={70}][center][b]Figs the doorbell, Iâ€™ve been knocking forever![/b][/center][/font_size]"
fit_content = true
scroll_active = false

[node name="SFX_Knock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_s2gii")
volume_db = 4.0
max_distance = 30000.0

[connection signal="pressed" from="MarginContainer/Panel/KnockButton/Button2" to="." method="knock_knock"]
[connection signal="pressed" from="MarginContainer/Panel/NameButton/Button2" to="." method="tell_name"]
[connection signal="pressed" from="MarginContainer/Panel/Line/Button2" to="." method="show_punchline"]
